Remove metadata for social media

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="ja" itemscope itemtype="http://schema.org/AboutPage">
+<html lang="ja">
   <head>
     {{> meta}}
 
-    <title itemprop="name">{{short_title}} - {{site_title}}</title>
+    <title>{{short_title}} - {{site_title}}</title>
 
     {{> link}}
-
-    {{> descriptive-metadata}}
 
     {{> style}}
 
