--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -2,44 +2,13 @@
 
 <!-- blosxom head -->
 <!DOCTYPE html>
-<html lang="$blog_language" itemscope itemtype="http://schema.org/<?$permalink::is_permalink ne="1">Blog</?><?$permalink::is_permalink eq="1">BlogPosting</?>">
+<html lang="$blog_language">
   <head>
     {{> meta}}
 
     <title>$categories::title$categories::title_sep$permalink::title$permalink::title_sep$blog_title - {{site_title}}</title>
 
     {{> link}}
-
-    $back_and_forth::link_prev
-
-    <?$permalink::is_permalink ne="1">
-      <meta content="$categories::title$categories::title_sep$blog_title - {{site_title}}" itemprop="name">
-      <meta content="{{scheme}}//{{domain}}{{image}}" itemprop="image">
-      <link href="{{canonical}}" itemprop="url">
-      <meta content="{{description}}" itemprop="description">
-
-      <meta content="$categories::title$categories::title_sep$blog_title - {{site_title}}" property="og:title">
-      <meta content="{{type}}" property="og:type">
-      <meta content="{{scheme}}//{{domain}}{{image}}" property="og:image">
-      <meta content="{{description}}" property="og:description">
-    </?>
-
-    <?$permalink::is_permalink eq="1">
-      <meta content="article" property="og:type">
-      <meta content="$permalink::title" property="og:title">
-      <meta content="$utils::ogp_image" property="og:image">
-      <meta content="$permalink::description" property="og:description">
-    </?>
-
-    <meta content="{{canonical}}" property="og:url">
-    <meta content="ja_JP" property="og:locale">
-    <meta content="{{site_title}}" property="og:site_name">
-    <meta content="https://www.facebook.com/hail2u" prefix="article: http://ogp.me/ns/article#" property="article:author">
-    <meta content="100000022521341" prefix="fb: http://ogp.me/ns/fb#" property="fb:admins">
-
-    <meta content="$utils::card_type" name="twitter:card">
-    <meta content="@hail2unet" name="twitter:site">
-    <meta content="@hail2u_" name="twitter:creator">
 
     {{> style}}
 
@@ -67,17 +36,14 @@
 <!-- blosxom story -->
       <?$permalink::is_permalink eq="1"><div</?><?$permalink::has_eyecatch eq="1"> class="has-image"</?><?$permalink::is_permalink eq="1"> role="main"</?><?$permalink::is_permalink eq="1">></?>
       <?$permalink::is_permalink ne="1"><article></?>
-        <?$permalink::has_image ne="1"><meta content="{{scheme}}//{{domain}}{{image}}" itemprop="image"></?>
-        <link href="$url$path/$fn.$default_flavour" itemprop="url">
-
-        <h1 class="first-heading" itemprop="name">$title</h1>
+        <h1 class="first-heading">$title</h1>
 
         <footer class="section-footer">
-          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00" itemprop="datePublished">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
-            · <span class="tag" itemprop="keywords"><a href="$url$path/">$categories::name</a></span></p>
+          <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$mo <@utils.strip_leading_zeros output="Yes">$da</@utils.strip_leading_zeros>, $yr</time>
+            · <span class="tag"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
 
-        <main itemprop="articleBody">$body</main>
+        <main>$body</main>
 
         <aside class="share-buttons">
           <ul>
