--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="ja" itemscope itemtype="http://schema.org/WebSite">
+<html lang="ja">
   <head>
     {{> meta}}
 
-    <title itemprop="name">{{site_title}}</title>
+    <title>{{site_title}}</title>
 
     {{> link}}
-
-    {{> descriptive-metadata}}
 
     {{> style}}
 
