--- a/src/html/partial/global-footer.mustache
+++ b/src/html/partial/global-footer.mustache
@@ -6,5 +6,5 @@
     <li><a href="{{feed_url}}" rel="alternate" type="application/rss+xml">RSS</a></li>
   </ul>
 
-  <p id="author" class="byline" itemprop="author" itemscope itemtype="http://schema.org/Person">Made by <span itemprop="name"><a href="https://kyonagashima.com/" rel="author" itemprop="url">Kyo Nagashima</a></span>.</p>
+  <p id="author" class="byline">Made by <a href="https://kyonagashima.com/" rel="author">Kyo Nagashima</a>.</p>
 </footer>
