--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -18,8 +18,7 @@
   <body>
     {{> global-header}}
 
-    <?$permalink::is_permalink eq="1"><div class="content"></?>
-    <?$permalink::is_permalink ne="1"><main class="content"></?>
+    <main class="content">
       <?$categories::enabled eq="1">
         <section>
           <h1 class="first-heading">“$categories::title”についての記事</h1>
@@ -34,8 +33,7 @@
 <!-- blosxom date -->
 
 <!-- blosxom story -->
-      <?$permalink::is_permalink eq="1"><div</?><?$permalink::has_eyecatch eq="1"> class="has-image"</?><?$permalink::is_permalink eq="1"> role="main"</?><?$permalink::is_permalink eq="1">></?>
-      <?$permalink::is_permalink ne="1"><article></?>
+      <article<?$permalink::has_eyecatch eq="1"> class="has-image"</?>>
         <h1 class="first-heading">$title</h1>
 
         <footer class="section-footer">
@@ -43,7 +41,6 @@
             · <span class="tag"><a href="$url$path/">$categories::name</a></span></p>
         </footer>
 
-        <main>$body</main>
 
         <aside class="share-buttons">
           <ul>
@@ -52,8 +49,8 @@
             <li><a href="http://b.hatena.ne.jp/my/add.confirm?title=<@utils.encode_uri_component output="Yes">$title - $blog_title - {{site_title}}</@utils.encode_uri_component>&amp;url=<@utils.encode_uri_component output="Yes">$url$path/$fn.$default_flavour</@utils.encode_uri_component>">Hatena</a></li>
           </ul>
         </aside>
-      <?$permalink::is_permalink eq="1"></div></?>
-      <?$permalink::is_permalink ne="1"></article></?>
+        $body
+      </article>
 
       <?$story_counter::count eq="1">
         {{> google-adsense}}
@@ -66,8 +63,7 @@
 
         {{> google-adsense}}
       </?>
-    <?$permalink::is_permalink ne="1"></main></?>
-    <?$permalink::is_permalink eq="1"></div></?>
+    </main>
 
     {{> site-search}}
 
