--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,8 +1,4 @@
-{{#weblog_child}}
-  <?$permalink::is_permalink ne="1"><header class="global-header" role="banner"></?>
-  <?$permalink::is_permalink eq="1"><div class="global-header" role="banner"></?>
-{{/weblog_child}}
-{{^weblog_child}}<header class="global-header" role="banner">{{/weblog_child}}
+<header class="global-header" role="banner">
   {{#home}}<mark class="logo">{{site_title}}</mark>{{/home}}
 
   <nav>
@@ -23,8 +19,4 @@
   </nav>
 
   {{#tagline}}<h1 class="tagline">{{.}}</h1>{{/tagline}}
-{{#weblog_child}}
-  <?$permalink::is_permalink ne="1"></header></?>
-  <?$permalink::is_permalink eq="1"></div></?>
-{{/weblog_child}}
-{{^weblog_child}}</header>{{/weblog_child}}
+</header>
