Add `role="main"` to `main` element

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -15,7 +15,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content">
+    <main class="content" role="main">
       <section id="website">
         <h1 class="first-heading">このウェブサイトについて</h1>
 
