--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -18,7 +18,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content">
+    <main class="content" role="main">
       <?$categories::enabled eq="1">
         <section>
           <h1 class="first-heading">“$categories::title”についての記事</h1>
