--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -15,7 +15,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content">
+    <main class="content" role="main">
       {{#articles}}
         <section id="latest-article" class="topic">
           {{#first}}
