--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -15,7 +15,7 @@
   <body>
     {{> global-header}}
 
-    <main class="content">
+    <main class="content" role="main">
       <section>
         <h1 class="first-heading"><a href="/documents/markup.html">“マークアップ”するということ ～ HTML5勧告に寄せて ～</a></h1>
 
