--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.76.2
+ * style.css v6.76.3
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -226,8 +226,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   margin-top: 0.618rem; }
 
 .site-search, .searchbox, figure, .global-header, .content, .content > article,
-.content > section,
-.content > [role="main"], .global-footer, .subcontent, .post-list li, .read-older {
+.content > section, .global-footer, .subcontent, .post-list li, .read-older {
   position: relative; }
 
 .site-search .query, .searchbox .query {
