Wrap Logo with `div`

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,8 +1,8 @@
 <header class="global-header" role="banner">
-  {{#home}}<mark class="logo">{{site_title}}</mark>{{/home}}
+  {{#home}}<div class="logo"><mark>{{site_title}}</mark></div>{{/home}}
 
   <nav>
-    {{^home}}<a class="logo" href="/">{{site_title}}</a>{{/home}}
+    {{^home}}<div class="logo"><a href="/">{{site_title}}</a></div>{{/home}}
 
     <ul class="site-navigation">
       {{#weblog}}
