--- a/styles/style.css
+++ b/styles/style.css
@@ -471,19 +471,14 @@ th {
 
 .logo {
   color: #534b47;
-  display: block;
   font-size: 0.811rem;
   font-weight: bold;
-  height: 4.854rem;
   line-height: 1.995;
   margin-top: 0; }
   .logo a {
     color: inherit; }
   .logo mark {
     background-color: transparent; }
-  @media (min-width: 43.118rem) {
-    .logo {
-      height: auto; } }
   @media (min-width: 61.015rem) {
     .logo {
       margin-left: -17.897rem;
@@ -498,9 +493,8 @@ th {
   right: 0;
   top: 0; }
   .site-navigation li {
-    display: block;
+    display: table-cell;
     line-height: 1.995;
-    padding-left: 0.809rem;
     padding-right: 0.809rem; }
   .site-navigation a {
     color: inherit;
@@ -511,11 +505,12 @@ th {
     padding-bottom: 0.125rem; }
   @media (min-width: 43.118rem) {
     .site-navigation li {
-      display: table-cell; } }
+      padding-left: 0.809rem; } }
   @media (min-width: 61.015rem) {
     .site-navigation {
-      margin-left: -0.809rem;
-      right: auto; } }
+      right: auto; }
+      .site-navigation li:first-child {
+        padding-left: 0; } }
 
 .tagline {
   display: none; }
