--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.76.5
+ * style.css v6.76.6
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -460,8 +460,7 @@ th {
     border-bottom: 0.125rem solid #cac6be; }
 
 .global-header {
-  margin-top: 1rem;
-  text-transform: uppercase; }
+  margin-top: 1rem; }
   @media (min-width: 43.118rem) {
     .global-header {
       margin-top: 1.618rem; } }
@@ -471,10 +470,8 @@ th {
 
 .logo {
   color: #534b47;
-  font-size: 0.811rem;
-  font-weight: bold;
-  line-height: 1.995;
-  margin-top: 0; }
+  text-transform: uppercase;
+  font-weight: bold; }
   .logo a {
     color: inherit; }
   .logo mark {
@@ -491,6 +488,7 @@ th {
   padding-left: 0;
   position: absolute;
   right: 0;
+  text-transform: uppercase;
   top: 0; }
   .site-navigation li {
     display: table-cell;
@@ -513,7 +511,13 @@ th {
         padding-left: 0; } }
 
 .tagline {
-  display: none; }
+  margin-top: 1.618rem; }
+  @media (min-width: 43.118rem) {
+    .tagline {
+      margin-top: 2.618rem; } }
+  @media (min-width: 61.015rem) {
+    .tagline {
+      margin-top: 4.236rem; } }
 
 .content {
   margin-top: -11.09rem; }
@@ -525,7 +529,7 @@ th {
       margin-top: 15.002rem; } }
   @media (min-width: 61.015rem) {
     .first-heading {
-      margin-top: 15.326rem; } }
+      margin-top: 17.944rem; } }
 
 .section-footer {
   bottom: 100%;
