Update Global Header markup

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,9 +1,8 @@
 <header class="global-header" role="banner">
-  {{#home}}<div class="logo"><mark>{{site_title}}</mark></div>{{/home}}
+  {{#home}}<h1 class="logo"><mark>{{site_title}}</mark></h1>{{/home}}
+  {{^home}}<h1 class="logo"><a href="/">{{site_title}}</a></h1>{{/home}}
 
   <nav>
-    {{^home}}<div class="logo"><a href="/">{{site_title}}</a></div>{{/home}}
-
     <ul class="site-navigation">
       {{#weblog}}
         {{#weblog_child}}<li><a href="/blog/"><mark>Weblog</mark></a></li>{{/weblog_child}}
@@ -18,5 +17,5 @@
     </ul>
   </nav>
 
-  {{#tagline}}<h1 class="tagline">{{.}}</h1>{{/tagline}}
+  {{#tagline}}<p class="tagline">{{.}}</p>{{/tagline}}
 </header>
