--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.76.7
+ * style.css v6.76.8
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -354,16 +354,11 @@ figcaption {
     padding-top: 0.618rem; }
   @media (min-width: 61.015rem) {
     figcaption {
-      border-bottom: 0.063rem solid #cac6be;
       bottom: 0;
-      padding-bottom: 0.681rem;
-      padding-top: 0;
       top: auto; }
       blockquote + figcaption {
-        border-bottom: 0;
         margin-left: -1.868rem;
         margin-right: 0;
-        padding-bottom: 0;
         position: static;
         text-align: left;
         width: auto; } }
@@ -570,13 +565,6 @@ th {
 
 .byline {
   color: #6a635e; }
-  .byline::before {
-    border-top: 0.125rem solid #cac6be;
-    content: "";
-    display: block;
-    height: 0;
-    margin-bottom: 0.618rem;
-    width: 3.607rem; }
   .byline mark {
     background-color: transparent;
     color: inherit; }
@@ -584,9 +572,7 @@ th {
     .byline {
       bottom: 0;
       margin-right: -16.088rem;
-      top: auto; }
-      .byline::before {
-        margin-left: auto; } }
+      top: auto; } }
 
 .site-search {
   max-width: 24.721rem;
@@ -704,14 +690,10 @@ th {
   .full-width {
     margin-left: -18.706rem; }
     .full-width figcaption {
-      border-bottom: 0;
-      border-left: 0.25rem solid #e1ddd5;
       bottom: auto;
       left: 0;
       margin-left: 0;
       margin-top: 1.618rem;
-      padding-bottom: 0;
-      padding-left: 0.559rem;
       text-align: left; } }
 
 .post-list {
