--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.77.0
+ * style.css v6.77.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -346,15 +346,18 @@ dd {
   margin-left: 1.7rem; }
 
 figcaption {
-  color: #6a635e; }
+  color: #6a635e;
+  margin-top: 0.588rem; }
   blockquote + figcaption {
     border-left: 0.25rem solid #e1ddd5;
     color: #6a635e;
+    margin-top: 0;
     padding-left: 1.7rem;
     padding-top: 0.588rem; }
   @media (min-width: 59.931rem) {
     figcaption {
       bottom: 0;
+      margin-top: 0;
       top: auto; }
       blockquote + figcaption {
         margin-left: -1.95rem;
@@ -759,14 +762,8 @@ th {
     margin-top: 4.913rem; } }
 
 .seealso {
-  border-left: 0.25rem double;
   color: #534b47;
-  font-size: 1.313rem;
-  padding-left: 0.85rem; }
-  @media (min-width: 59.931rem) {
-    .seealso {
-      margin-left: -1.95rem;
-      padding-left: 1.7rem; } }
+  font-size: 1.313rem; }
 
 .sidenote {
   color: #98928c;
