--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.77.2
+ * style.css v6.77.3
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -143,8 +143,8 @@ td {
   margin-left: auto;
   margin-right: auto;
   max-width: 40rem;
-  padding-left: 0.638rem;
-  padding-right: 0.638rem; }
+  padding-left: 0.567rem;
+  padding-right: 0.567rem; }
   @media (min-width: 43.2rem) {
     .global-header, .content, .global-footer, .subcontent {
       padding-left: 0.85rem;
@@ -169,8 +169,8 @@ td {
   white-space: nowrap; }
 
 .flat-ul, .full-width {
-  margin-left: -0.638rem;
-  margin-right: -0.638rem; }
+  margin-left: -0.567rem;
+  margin-right: -0.567rem; }
   @media (min-width: 43.2rem) {
     .flat-ul, .full-width {
       margin-left: -0.85rem;
@@ -232,8 +232,8 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   border: 0;
   color: #fefcf8;
   height: 1.95rem;
-  right: 0;
   position: absolute;
+  right: 0;
   width: 20%; }
 
 html {
@@ -476,7 +476,7 @@ th {
   .site-navigation li {
     display: table-cell;
     line-height: 2.202;
-    padding-right: 0.85rem; }
+    padding-right: 0.567rem; }
   .site-navigation a {
     color: inherit;
     display: inline-block; }
@@ -486,7 +486,8 @@ th {
     padding-bottom: 0.125rem; }
   @media (min-width: 43.2rem) {
     .site-navigation li {
-      padding-left: 0.85rem; } }
+      padding-left: 0.85rem;
+      padding-right: 0.85rem; } }
   @media (min-width: 59.931rem) {
     .site-navigation {
       right: auto; }
@@ -560,17 +561,18 @@ th {
       top: auto; } }
 
 .site-search {
-  width: 33.333%;
   top: 4.913rem; }
   @media (min-width: 43.2rem) {
     .site-search {
       position: absolute;
       right: 0.85rem;
       top: 8.033rem;
+      width: 43%;
       z-index: 1; } }
   @media (min-width: 59.931rem) {
     .site-search {
-      top: 13.814rem; } }
+      top: 13.814rem;
+      width: 32%; } }
 
 .circular {
   border-radius: 51%; }
@@ -629,7 +631,7 @@ th {
     max-width: 36.731rem; } }
 
 .flat-ul {
-  padding-left: 2.55rem; }
+  padding-left: 1.133rem; }
   @media (min-width: 43.2rem) {
     .flat-ul {
       padding-left: 0; }
@@ -656,12 +658,15 @@ th {
     .floatage-right:first-child {
       margin-top: 0; } }
 .footnote {
-  background-image: linear-gradient(to right, #cac6be 0, #cac6be 50%, transparent 50%, transparent 100%);
-  background-position: 0 1.7rem;
-  background-repeat: repeat-x;
-  background-size: 0.5rem 0.063rem;
-  font-size: 0.772rem;
-  padding-top: 0.588rem; }
+  font-size: 0.772rem; }
+  .footnote::before {
+    border-top: 0.063rem solid #cac6be;
+    content: "";
+    display: block;
+    margin-top: 2.89rem;
+    width: 25%; }
+  .footnote :first-child {
+    margin-top: 0.588rem; }
 
 .full-width img,
 .full-width video,
@@ -669,14 +674,19 @@ th {
   border: 0;
   width: 100%; }
 .full-width figcaption {
-  margin-left: 0.85rem; }
+  margin-left: 0.567rem; }
+@media (min-width: 43.2rem) {
+  .full-width {
+    margin-left: 0;
+    margin-right: 0; }
+    .full-width figcaption {
+      margin-left: 0; } }
 @media (min-width: 59.931rem) {
   .full-width {
-    margin-left: -17.581rem; }
+    margin-left: -16.731rem; }
     .full-width figcaption {
       bottom: auto;
       left: 0;
-      margin-left: 0;
       margin-top: 1.7rem;
       text-align: left; } }
 
