--- a/styles/debug.css
+++ b/styles/debug.css
@@ -70,7 +70,7 @@ body::after {
 .font-family-body {
   font-family: "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif; }
 
-.font-family-code {
+.font-family-pre {
   font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace; }
 
 .italic {
@@ -78,6 +78,13 @@ body::after {
 
 .bold {
   font-weight: bold; }
+
+.no-webfont {
+  font-family: "Helvetica Neue", "Calibri", "Emoji", sans-serif; }
+  .no-webfont pre {
+    font-family: "Menlo", "Consolas", "Emoji", monospace; }
+  .no-webfont code {
+    font-family: "Menlo", "Consolas", "Emoji", monospace; }
 
 .colors {
   padding-left: 0; }
