--- a/styles/debug.css
+++ b/styles/debug.css
@@ -133,25 +133,25 @@ body::after {
   .colors.variation-tint li:nth-child(5)::before {
     background-color: #f8f5ec; }
   .colors.variation-accent li:nth-child(1)::before {
-    background-color: #278dd2; }
+    background-color: #2175b4; }
   .colors.variation-accent li:nth-child(2)::before {
-    background-color: #065a90; }
+    background-color: #074779; }
   .colors.variation-accent li:nth-child(3)::before {
-    background-color: #097ecc; }
+    background-color: #095d9e; }
   .colors.variation-accent li:nth-child(4)::before {
-    background-color: #4ba2db; }
+    background-color: #428ac1; }
   .colors.variation-accent li:nth-child(5)::before {
-    background-color: #75bae7; }
+    background-color: #69a5d3; }
   .colors.variation-accent.complement li:nth-child(1)::before {
-    background-color: #ff6900; }
+    background-color: #f37f1e; }
   .colors.variation-accent.complement li:nth-child(2)::before {
-    background-color: #9f2100; }
+    background-color: #9d4700; }
   .colors.variation-accent.complement li:nth-child(3)::before {
-    background-color: #c94500; }
+    background-color: #c65e07; }
   .colors.variation-accent.complement li:nth-child(4)::before {
-    background-color: #ffba00; }
+    background-color: #ff9d4b; }
   .colors.variation-accent.complement li:nth-child(5)::before {
-    background-color: #ffde00; }
+    background-color: #ffb374; }
 
 .line-length {
   font-family: "Verdana", sans-serif;
