--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.77.4
+ * style.css v6.78.0
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -203,7 +203,7 @@ h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read
   text-decoration: none; }
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
     h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read-older a, .topic a, .share-buttons a {
-      color: #278dd2; } }
+      color: #2175b4; } }
 
 p, hr, pre, blockquote, ul,
 ol, dl, figure, table, .contact-form, .searchbox {
@@ -228,7 +228,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   padding: 0;
   width: 79%; }
 .site-search .button, .searchbox .button {
-  background-color: #75bae7;
+  background-color: #69a5d3;
   border: 0;
   color: #fefcf8;
   height: 1.95rem;
@@ -349,13 +349,13 @@ figcaption {
         width: auto; } }
 
 a {
-  color: #278dd2;
+  color: #2175b4;
   text-decoration: underline; }
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
     a {
-      -moz-text-decoration-color: #75bae7;
-      -webkit-text-decoration-color: #75bae7;
-      text-decoration-color: #75bae7;
+      -moz-text-decoration-color: #69a5d3;
+      -webkit-text-decoration-color: #69a5d3;
+      text-decoration-color: #69a5d3;
       color: inherit; } }
 
 em {
@@ -364,7 +364,7 @@ em {
   font-weight: bolder; }
 
 strong {
-  color: #ff6900;
+  color: #f37f1e;
   font-weight: bolder; }
 
 cite {
@@ -392,7 +392,7 @@ kbd {
     width: 0; }
 
 mark {
-  background-color: #ffde00;
+  background-color: #ffb374;
   color: inherit; }
 
 ins {
@@ -482,7 +482,7 @@ th {
     display: inline-block; }
   .site-navigation mark {
     background-color: transparent;
-    border-bottom: 0.125rem solid #278dd2;
+    border-bottom: 0.125rem solid #2175b4;
     padding-bottom: 0.125rem; }
   @media (min-width: 43.2rem) {
     .site-navigation li {
@@ -610,7 +610,7 @@ th {
   resize: vertical;
   width: 100%; }
 .contact-form .button {
-  background-color: #75bae7;
+  background-color: #69a5d3;
   border: 0;
   color: #fefcf8;
   cursor: pointer;
