--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.78.1
+ * style.css v6.78.2
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -143,12 +143,8 @@ td {
   margin-left: auto;
   margin-right: auto;
   max-width: 40rem;
-  padding-left: 0.567rem;
-  padding-right: 0.567rem; }
-  @media (min-width: 43.2rem) {
-    .global-header, .content, .global-footer, .subcontent {
-      padding-left: 0.85rem;
-      padding-right: 0.85rem; } }
+  padding-left: 0.85rem;
+  padding-right: 0.85rem; }
   @media (min-width: 59.931rem) {
     .global-header, .content, .global-footer, .subcontent {
       padding-left: 17.581rem; } }
@@ -169,12 +165,8 @@ td {
   white-space: nowrap; }
 
 .flat-ul, .full-width {
-  margin-left: -0.567rem;
-  margin-right: -0.567rem; }
-  @media (min-width: 43.2rem) {
-    .flat-ul, .full-width {
-      margin-left: -0.85rem;
-      margin-right: -0.85rem; } }
+  margin-left: -0.85rem;
+  margin-right: -0.85rem; }
 
 @media (min-width: 59.931rem) {
   figcaption, .section-footer, .byline, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
@@ -474,7 +466,7 @@ th {
   .site-navigation li {
     display: table-cell;
     line-height: 2.202;
-    padding-right: 0.567rem; }
+    padding-right: 0.85rem; }
   .site-navigation a {
     color: inherit;
     display: inline-block; }
@@ -484,8 +476,7 @@ th {
     padding-bottom: 0.125rem; }
   @media (min-width: 43.2rem) {
     .site-navigation li {
-      padding-left: 0.85rem;
-      padding-right: 0.85rem; } }
+      padding-left: 0.85rem; } }
   @media (min-width: 59.931rem) {
     .site-navigation {
       right: auto; }
@@ -628,7 +619,7 @@ th {
     max-width: 36.731rem; } }
 
 .flat-ul {
-  padding-left: 1.133rem; }
+  padding-left: 0.85rem; }
   @media (min-width: 43.2rem) {
     .flat-ul {
       padding-left: 0; }
@@ -671,7 +662,7 @@ th {
   border: 0;
   width: 100%; }
 .full-width figcaption {
-  margin-left: 0.567rem; }
+  margin-left: 0.85rem; }
 @media (min-width: 43.2rem) {
   .full-width {
     margin-left: 0;
