--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.78.2
+ * style.css v6.78.4
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -169,7 +169,7 @@ td {
   margin-right: -0.85rem; }
 
 @media (min-width: 59.931rem) {
-  figcaption, .section-footer, .byline, .post-list .info, .read-older a::before, .sidenote, .share-buttons ul {
+  figcaption, .section-footer, .byline, .post-list .info, .read-older a::before, .sidenote {
     margin-right: 2.89rem;
     position: absolute;
     right: 100%;
@@ -177,24 +177,19 @@ td {
     width: 13.841rem;
     z-index: 1; } }
 
-.section-footer, .post-list .info {
-  color: #98928c;
-  font-size: 0.772rem;
-  line-height: 1.762; }
-  .section-footer .date, .post-list .info .date {
-    color: #6a635e; }
-  .section-footer .tag, .post-list .info .tag {
-    color: #6a635e; }
-
 h1, h2 {
   font-weight: 400;
   line-height: 1.36; }
 
-h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read-older a, .topic a, .share-buttons a {
-  text-decoration: none; }
+a {
+  color: #2175b4;
+  text-decoration: underline; }
   @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
-    h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read-older a, .topic a, .share-buttons a {
-      color: #2175b4; } }
+    a {
+      -moz-text-decoration-color: #69a5d3;
+      -webkit-text-decoration-color: #69a5d3;
+      text-decoration-color: #69a5d3;
+      color: inherit; } }
 
 p, hr, pre, blockquote, ul,
 ol, dl, figure, table, .contact-form, .searchbox {
@@ -221,11 +216,28 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
 .site-search .button, .searchbox .button {
   background-color: #69a5d3;
   border: 0;
+  border-radius: 0;
   color: #fefcf8;
   height: 1.95rem;
+  padding: 0;
   position: absolute;
   right: 0;
   width: 20%; }
+
+.section-footer, .post-list .info {
+  color: #98928c;
+  font-size: 0.772rem;
+  line-height: 1.762; }
+  .section-footer .date, .post-list .info .date {
+    color: #6a635e; }
+  .section-footer .tag, .post-list .info .tag {
+    color: #6a635e; }
+
+h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read-older a, .topic a {
+  text-decoration: none; }
+  @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
+    h1 a, .global-header a, .section-footer a, .global-footer a, .post-list a, .read-older a, .topic a {
+      color: #2175b4; } }
 
 html {
   -webkit-font-feature-settings: "kern" 1, "liga" 1, "lnum" 1, "pnum" 1;
@@ -339,16 +351,6 @@ figcaption {
         text-align: left;
         width: auto; } }
 
-a {
-  color: #2175b4;
-  text-decoration: underline; }
-  @supports (-moz-text-decoration-color: red) or (-webkit-text-decoration-color: red) or (text-decoration-color: red) {
-    a {
-      -moz-text-decoration-color: #69a5d3;
-      -webkit-text-decoration-color: #69a5d3;
-      text-decoration-color: #69a5d3;
-      color: inherit; } }
-
 em {
   color: #534b47;
   font-style: normal;
@@ -452,8 +454,7 @@ th {
     background-color: transparent; }
   @media (min-width: 59.931rem) {
     .logo {
-      margin-left: -16.731rem;
-      width: 13.841rem; } }
+      margin-left: -16.731rem; } }
 
 .site-navigation {
   font-size: 0.772rem;
@@ -563,9 +564,6 @@ th {
       top: 13.814rem;
       width: 32%; } }
 
-.circular {
-  border-radius: 51%; }
-
 .contact-form .spamfree {
   display: none; }
 .contact-form .cell {
@@ -601,6 +599,7 @@ th {
 .contact-form .button {
   background-color: #69a5d3;
   border: 0;
+  border-radius: 0;
   color: #fefcf8;
   cursor: pointer;
   display: block;
@@ -619,7 +618,7 @@ th {
     max-width: 36.731rem; } }
 
 .flat-ul {
-  padding-left: 0.85rem; }
+  padding-left: 2.55rem; }
   @media (min-width: 43.2rem) {
     .flat-ul {
       padding-left: 0; }
@@ -764,28 +763,7 @@ th {
       height: 280px;
       width: 336px; } }
 
-.share-buttons ul {
-  padding-left: 0; }
-  .share-buttons ul::before {
-    color: #534b47;
-    content: "Share:";
-    display: table-cell;
-    font-weight: bolder;
-    text-transform: uppercase; }
-.share-buttons li {
-  display: table-cell;
-  padding-left: 0.85rem; }
-@media (min-width: 59.931rem) {
-  .share-buttons ul {
-    bottom: 0;
-    top: auto; }
-    .share-buttons ul::before {
-      display: block; }
-  .share-buttons li {
-    display: block;
-    padding-left: 0; } }
-
-.contact-form .button {
+.contact-form .button, .searchbox .button, .site-search .button {
   -webkit-appearance: none; }
 
 pre {
