--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -2,8 +2,8 @@
   {{#home}}<h1 class="logo"><mark>{{site_title}}</mark></h1>{{/home}}
   {{^home}}<h1 class="logo"><a href="/">{{site_title}}</a></h1>{{/home}}
 
-  <nav>
-    <ul class="site-navigation">
+  <nav class="site-navigation">
+    <ul>
       {{#weblog}}
         {{#weblog_child}}<li><a href="/blog/"><mark>Weblog</mark></a></li>{{/weblog_child}}
         {{^weblog_child}}<li><mark>Weblog</mark></li>{{/weblog_child}}
