--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
- * style.css v6.79.0
+ * style.css v6.79.1
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -637,7 +637,7 @@ th {
   @media (min-width: 43.2rem) {
     .post-list .info {
       float: right;
-      line-height: 2.312rem;
+      line-height: 2.312;
       margin-left: 0.85rem; } }
   @media (min-width: 59.931rem) {
     .post-list .info {
