--- a/styles/style.css
+++ b/styles/style.css
@@ -1,130 +1,10 @@
 @charset "UTF-8";
 /*!
- * style.css v6.79.4
+ * style.css v6.79.5
  * https://github.com/hail2u/hail2u.net-styles
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
  */
-/**
- * Remove default margin.
- */
-body {
-  margin: 0; }
-
-/**
- * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11
- * and Firefox.
- * Correct `block` display not defined for `main` in IE 11.
- */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block; }
-
-/**
- * 1. Correct `inline-block` display not defined in IE 8/9.
- * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
- */
-audio,
-canvas,
-progress,
-video {
-  display: inline-block;
-  /* 1 */
-  vertical-align: baseline;
-  /* 2 */ }
-
-/*
- * Prevent modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
-audio:not([controls]) {
-  display: none;
-  height: 0; }
-
-/*
- * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
- */
-[hidden],
-template {
-  display: none; }
-
-/**
- * Remove border when inside `a` element in IE 8/9/10.
- */
-img {
-  border: 0; }
-
-/**
- * Correct overflow not hidden in IE 8/9/10/11.
- */
-svg:not(:root) {
-  overflow: hidden; }
-
-/**
- * Address differences between Firefox and other browsers.
- */
-hr {
-  box-sizing: content-box;
-  height: 0; }
-
-/**
- * Contain overflow in all browsers.
- */
-pre {
-  overflow: auto; }
-
-/**
- * Address odd `em`-unit font size rendering in all browsers.
- */
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em; }
-
-/**
- * 1. Correct color not being inherited.
- *    Known issue: affects color of disabled elements.
- * 2. Correct font properties not being inherited.
- * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
- */
-button,
-input,
-optgroup,
-select,
-textarea {
-  color: inherit;
-  /* 1 */
-  font: inherit;
-  /* 2 */
-  margin: 0;
-  /* 3 */ }
-
-/**
- * Remove most spacing between table cells.
- */
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-th,
-td {
-  padding: 0; }
-
 @font-face {
   font-family: "Emoji";
   src: local("Apple Color Emoji"), local("Segoe UI Emoji"), local("Segoe UI Symbol"); }
@@ -199,6 +79,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   border-radius: 0;
   box-sizing: border-box;
   color: #3c3330;
+  font-family: inherit;
   height: 1.95rem;
   padding: 0;
   width: 79%; }
@@ -208,6 +89,7 @@ h2 + ol, h2 + dl, h2 + figure, h2 + table {
   border: 0;
   border-radius: 0;
   color: #fefcf8;
+  font-family: inherit;
   height: 1.95rem;
   padding: 0;
   position: absolute;
@@ -238,7 +120,8 @@ body {
   background-color: #fcf9f0;
   color: #3c3330;
   font-family: "Eau Douce", "Helvetica Neue", "Calibri", "Emoji", sans-serif;
-  line-height: 1.53; }
+  line-height: 1.53;
+  margin: 0; }
   @media (min-width: 43.2rem) {
     body {
       line-height: 1.7; } }
@@ -260,6 +143,7 @@ h2 {
 hr {
   background-color: transparent;
   border: 0;
+  box-sizing: content-box;
   clear: both;
   color: #98928c;
   font-size: 1.7rem;
@@ -274,7 +158,9 @@ pre {
   font-feature-settings: "kern" 0, "liga" 0, "pnum" 0, "tnum" 1, "zero" 1;
   clear: both;
   font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace;
-  line-height: 1.36; }
+  font-size: 1em;
+  line-height: 1.36;
+  overflow: auto; }
   @media (min-width: 43.2rem) {
     pre {
       overflow: visible;
@@ -342,6 +228,9 @@ figcaption {
         text-align: left;
         width: auto; } }
 
+main {
+  display: block; }
+
 em {
   color: #534b47;
   font-style: normal;
@@ -362,7 +251,8 @@ code,
 var,
 samp,
 kbd {
-  font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace; }
+  font-family: "M+ 1m Latin", "Menlo", "Consolas", "Emoji", monospace;
+  font-size: 1em; }
   p code::before, p code::after, p
   var::before, p
   var::after, p
@@ -387,6 +277,7 @@ del {
 
 img,
 video {
+  border: 0;
   box-sizing: border-box;
   height: auto;
   max-height: 100%;
@@ -399,6 +290,8 @@ video {
 table {
   -webkit-font-feature-settings: "pnum" 0, "tnum" 1, "zero" 1;
   font-feature-settings: "pnum" 0, "tnum" 1, "zero" 1;
+  border-collapse: collapse;
+  border-spacing: 0;
   clear: both;
   display: block;
   max-width: 100%;
@@ -419,6 +312,9 @@ th {
   text-align: left; }
   thead th {
     border-bottom: 0.125rem solid #cac6be; }
+
+svg:not(:root) {
+  overflow: hidden; }
 
 .global-header {
   margin-top: 1rem; }
